@@ -6,6 +6,6 @@
 [subrepo]
 	remote = git://github.com/Bailador/Bailador.git
 	branch = master
-	commit = 86a23e8ed416cdfa196a3904d60b47a1ead2ad6a
-	parent = 55a6e14c4cce03078f5e8ac1769c9e0c8f119a38
+	commit = d4b5253ea95296f444e6461cb2d73a9564700a33
+	parent = 9d1e9e52ccba3b8f44e93b2f59f16bfca0d2fe27
 	cmdver = 0.4.0
