@@ -35,32 +35,30 @@ subtest {
 subtest {
     plan 2;
     my %data = run-psgi-request($app, 'GET', '/red');
-    is-deeply %data<response>, [302, ["Content-Type" => "text/html", :Location("/index.html")], "Not found"], 'route GET /red';
+    is-deeply %data<response>, [302, ["Content-Type" => "text/html", :Location("/index.html")], ""], 'route GET /red';
     is %data<err>, '';
-}, '/red';
+}, 'GET /red';
 
-todo "See https://github.com/Bailador/Bailador/issues/214";
 subtest {
     plan 2;
     my %data = run-psgi-request($app, 'HEAD', '/red');
-    is-deeply %data<response>, [302, ["Content-Type" => "text/html", :Location("/index.html")], "Not found"], 'route GET /red';
+    is-deeply %data<response>, [302, ["Content-Type" => "text/html", :Location("/index.html")], ""], 'route GET /red';
     is %data<err>, '';
-}, '/';
+}, 'HEAD /red';
 
 subtest {
     plan 2;
     my %data = run-psgi-request($app, 'GET', '/redir/301');
-    is-deeply %data<response>, [301, ["Content-Type" => "text/html", :Location("/index.html")], "Not found"], 'route GET /redir';
+    is-deeply %data<response>, [301, ["Content-Type" => "text/html", :Location("/index.html")], ""], 'route GET /redir';
     is %data<err>, '';
 }, '/redir/301';
 
-todo "See https://github.com/Bailador/Bailador/issues/214";
 subtest {
     plan 2;
     my %data = run-psgi-request($app, 'HEAD', '/redir/301');
-    is-deeply %data<response>, [301, ["Content-Type" => "text/html", :Location("/index.html")], "Not found"], 'route HEAD /redir/301';
+    is-deeply %data<response>, [301, ["Content-Type" => "text/html", :Location("/index.html")], ""], 'route HEAD /redir/301';
     is %data<err>, '';
-}, '/';
+}, 'HEAD /redir/301';
 
 
 subtest {
